2009-03-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Made two layout tests less agressive, to accomodate a change I made
        for <rdar://problem/6603562> REGRESSION (Safari 4): regular expression
        pattern size limit lower than Safari 3.2, other browsers, breaks SAP (14873)

        * fast/js/regexp-charclass-crash-expected.txt:
        * fast/js/regexp-charclass-crash.html: Explicitly limit the number of iterations
        in the test loop. Otherwise, regular expression engines supporting very
        long patterns take a very very very long time to run this test.

        * fast/js/resources/regexp-overflow.js: Made the "too big" regexp in
        this test even bigger, to match our new limit.

2009-03-19  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24686
        
        New tests for hit testing transformed, coplanar elements, and transformed elements
        with a transformed overlay.

        * platform/mac/transforms/3d/point-mapping/3d-point-mapping-coplanar-expected.txt: Added.
        * platform/mac/transforms/3d/point-mapping/3d-point-mapping-overlapping-expected.txt: Added.
        * transforms/3d/point-mapping/3d-point-mapping-coplanar.html: Added.
        * transforms/3d/point-mapping/3d-point-mapping-overlapping.html: Added.

2009-03-19  Scott Violet  <sky@google.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24678
        Transitions tests somewhat flakey on Chromium.

        Modifies transitions/transition-end-event-helpers.js to only process
        results once.
        
        * transitions/transition-end-event-helpers.js:

2009-03-19  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver Hunt.

        Add test for bug 24596: ASSERT in JSC::PropertySlot::slotBase @ iGoogle homepage
        <https://bugs.webkit.org/show_bug.cgi?id=24596>